# aoc-2023

./: .gitignore  pyproject.toml
.github/ISSUE_TEMPLATE/: day-x-puzzle.md
.github/workflows/: lint-and-test.yml
.trunk/: trunk.yaml
.trunk/configs/: .pylintrc
aoc_2023/: utils.py
aoc_2023/day1/: day1.py
aoc_2023/day2/: day2.py
aoc_2023/day3/: day3.py
aoc_2023/day4/: day4.py
tests/: test_main.py
tests/day1/: test_day1.py
tests/day2/: test_day2.py
tests/day3/: test_day3.py  test_day3_puzzle_input.txt
tests/day4/: test_day4.py
