[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = "Solving the Advent of Code 2023 puzzles one day at the time 🚀"
authors = ["David Kragbé <42718923+dxvxd5@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
